# src/api/rest/routes.rs
@@ -465,6 +465,11 @@ async fn split_window(
     Ok(axum::http::StatusCode::OK)
 }
 
+#[derive(Deserialize, ToSchema)]
+struct CapturePaneRequest {
+    target: String,
+}
+
 #[derive(Serialize, ToSchema)]
 struct CapturePaneResponse {
     content: String,
@@ -481,7 +486,7 @@ struct CapturePaneResponse {
     )
 )]
 async fn capture_pane(
-    axum::extract::Query(params): axum::extract::Query<KillTargetRequest>,
+    axum::extract::Query(params): axum::extract::Query<CapturePaneRequest>,
 ) -> Result<Json<CapturePaneResponse>, (axum::http::StatusCode, String)> {
     let content = RestHandler
         .capture_pane(&params.target)
@@ -524,6 +529,7 @@ async fn capture_pane(
         NewWindowRequest,
         NewWindowResponse,
         SplitWindowRequest,
+        CapturePaneRequest,
         CapturePaneResponse
     )),
     info(
